--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -1,3 +1,3 @@
 <h1>Home#show</h1>
 <p>Find me in app/views/home/show.html.erb</p>
-<%= link_to "Match by state", legislators_path %>
+<%= link_to "show senator", senator_path %>
