Change home view

--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -1,6 +1,4 @@
-<h1>Home#show</h1>
-<p>Find me in app/views/home/show.html.erb</p>
-
+<h1>Welcome to Know Your Rep</h1>
 <% if current_user %>
   <%= link_to "Start game", games_path, method: :post%>
 <% else %>
